--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title>Vuegram</title>
+  </head>
 
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<title>Vuegram</title>
-</head>
-
-<body>
-	<div id="app"></div>
-	<!-- built files will be auto injected -->
-</body>
-
+  <body>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
+  <div class="paesdiv">
+    <div class="my-super-class">
+      <ul>
+        <li>
+          <a href="#">Link</a>
+          <p>hoi</p>
+        </li>
+        <li>
+          <a href="#">Link</a>
+          <p>hoi</p>
+        </li>
+        <li>
+          <a href="#">Link</a>
+          <p>hoi</p>
+        </li>
+      </ul>
+    </div>
+  </div>
 </html>
