--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <ul>
         <li>
           <a href="#">Link</a>
-          <p>hoi</p>
+          <p>Sali</p>
         </li>
         <li>
           <a href="#">Link</a>
